--- a/static/index.html
+++ b/static/index.html
@@ -4,12 +4,57 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Portfolio</title>
 
+        <!-- Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        
+        <!-- External Files -->
         <link rel="stylesheet" href="./style/main.css" type="text/css"> 
         <script src="./scipt/main.js"></script>
     </head>
 
     
-    <body>
-        <!-- TODO -->
+    <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a href="#home">Home</a></li>
+                <li class="nav-item"><a href="#about">About Me</a></li>
+                <li class="nav-item"><a href="#projects">Projects</a></li>
+                <li class="nav-item"><a href="#skills">Skills</a></li>
+                <li class="nav-item"><a href="#resume">Resume</a></li>
+                <li class="nav-item"><a href="#contact">Contact Me</a></li>
+            </ul>
+        </nav>
+
+        <!-- Home / Top -->
+        <div id="home" style="height: 100vh">
+            <h1>Home</h1>
+        </div>
+
+        <!-- About Me -->
+        <div id="about" style="height: 100vh">
+            <h1>About Me</h1>
+        </div>
+
+        <!-- Projects -->
+        <div id="projects" style="height: 100vh">
+            <h1>Projects</h1>    
+        </div>
+
+        <!-- Skills -->
+        <div id="skills" style="height: 100vh">
+            <h1>Skills</h1> 
+        </div>
+
+        <!-- Resume -->
+        <div id="resume" style="height: 100vh">
+            <h1>Resume</h1>    
+        </div>
+
+        <!-- Contact Me -->
+        <div id="contact" style="height: 100vh">
+            <h1>Contact Me</h1>    
+        </div>
     </body>
 </html>
