--- a/static/index.html
+++ b/static/index.html
@@ -15,13 +15,19 @@
         
         <!-- External Files -->
         <link rel="stylesheet" href="./style/main.css" type="text/css"> 
-        <script src="./scipt/main.js"></script>
+        <link rel="stylesheet" id="lightingMode" href="./style/dark.css" type="text/css">
+       
+      <!---
+        <link rel="stylesheet" href="./style/light.css" id="light" class="alternate">
+        <link rel="stylesheet" href="./style/dark.css"  id="dark"  class="alternate">
+    -->
+        <script src="./script/main.js"></script>
     </head>
 
     <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
         <!-- The navbar -->
         <div id="navbar">
-          <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+          <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" id="nav">
             <ul class="navbar-nav">
               <li><a href="#home">Home</a></li>
               <li><a href="#projects">Projects</a></li>
@@ -36,6 +42,7 @@
         <div id="home">
           <div class="animate-character">
             <h1>Julie Dosher</h1>
+            <button type="button" onclick="toggleLightMode()">Toggle</button>
           </div>
         </div>
         <hr>
@@ -124,15 +131,7 @@
                 <div class="card-body">
                   <h4 class="card-title">node.js</h4>
                 </div>
-              </div>  
-  
-              <!-- .NET -->
-              <div class="card">
-                <img class="card-img-top" src="./images/icons/net.png" alt=".NET">
-                <div class="card-body">
-                  <h4 class="card-title">.NET</h4>
-                </div>
-              </div>  
+              </div>   
   
               <!-- Mongoose -->
               <div class="card">
