fixed navbar light toggle placement

--- a/static/index.html
+++ b/static/index.html
@@ -29,23 +29,18 @@
         <div id="navbar">
           <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" id="nav">
             <div class="navbar-nav">
-              <div class="nav-left">
-                <a href="#home">Home</a>
-                <a>|</a>
-                <a href="#projects">Projects</a>
-                <a>|</a>
-                <a href="#skills">Skills</a>
-                <a>|</a>
-                <a href="#about">About Me</a>
-                <a>|</a>
-                <a href="#contact">Contact</a>
-              </div>
-
-              <div class="nav-right">
-                <a><button type="button" onclick="toggleLightMode()" title="Toggle Light Mode"><img id="modeImage" src="./images/icons/lightMode.png"></button></a>
-              </div>
-            </div>
-            
+              <button type="button" onclick="toggleLightMode()" title="Toggle Light Mode"><img id="modeImage" src="./images/icons/lightMode.png"></button>
+              <a>|</a>
+              <a href="#home">Home</a>
+              <a>|</a>
+              <a href="#projects">Projects</a>
+              <a>|</a>
+              <a href="#skills">Skills</a>
+              <a>|</a>
+              <a href="#about">About Me</a>
+              <a>|</a>                
+              <a href="#contact">Contact</a>    
+            </div> 
           </nav>
         </div>
   
