fixed navbar light toggle placement

--- a/static/index.html
+++ b/static/index.html
@@ -134,7 +134,7 @@
               <div class="card">
                 <img class="card-img-top" src="./images/icons/nodejs.png" alt="node.js">
                 <div class="card-body">
-                  <h4 class="card-title">node.js</h4>
+                  <h4 class="card-title">Node.js</h4>
                 </div>
               </div>   
   
