--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
         <!-- Custom Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Source+Sans+Pro&family=Yatra+One&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Source+Sans+Pro&family=Yatra+One&family=Raleway:wght@300&display=swap" rel="stylesheet">
 
         <!-- Bootstrap -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -49,6 +49,8 @@
           <div class="animate-character">
             <h1>Julie Dosher</h1>
           </div>
+          <br><br><br><br>
+          <h3>Welcome to my portfolio!</h3>
         </div>
         <hr>
         
@@ -116,7 +118,7 @@
   
           </div>
   
-          <br><br><br>
+          <br><br>
           <!-- Frameworks -->
           <div class="card-deck">
             <div class="float-left">
@@ -180,7 +182,36 @@
   
         <!-- Section 5: Contact - TODO -->
         <div id="contact">
-          <h1>Contact Me</h1> 
+          <h1>~ Contact Me ~</h1> 
+          <br><br>
+          <p>
+            You can email me at 
+            <a href="mailto:dosher.julie@gmail.com">dosher.julie@gmail.com</a> or 
+            <a href="mailto:juliegdosher@lewisu.edu">juliegdosher@lewisu.edu</a>
+          </p>
+          <p>Check out my <a href="./resources/JulieDosher.pdf" target="_blank">resume</a>!</p>
+          <br><br><br><br>
+          <h3><i>Let's Connect!</i></h3>
+          <br><br>
+          <div class="card-deck">
+            <div class="card">
+              <a href="https://github.com/juliedosher" target="_blank"><img class="card-img-top" src="./images/icons/github-darkMode.png" id="githubImage" alt="Github"></a>
+            </div>  
+
+            <div class="card">
+              <a href="https://www.linkedin.com/in/julie-dosher/" target="_blank"><img class="card-img-top" src="./images/icons/linkedin.png" alt="LinkedIn"></a>
+            </div>  
+
+            <div class="card">
+              <a href="https://app.joinhandshake.com/stu/users/43255566" target="_blank"><img class="card-img-top" src="./images/icons/handshake.png" alt="Handshake"></a>
+            </div> 
+
+            <div class="card">
+              <a href="https://www.facebook.com/julie.dosher.90/" target="_blank"><img class="card-img-top" src="./images/icons/facebook.png" alt="Facebook"></a>
+            </div> 
+
+          </div>
+
         </div>
         
     </body>   
