fixed light toggle image

--- a/static/index.html
+++ b/static/index.html
@@ -29,7 +29,7 @@
         <div id="navbar">
           <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" id="nav">
             <div class="navbar-nav">
-              <button type="button" onclick="toggleLightMode()" title="Toggle Light Mode"><img id="modeImage" src="./images/icons/lightMode.png"></button>
+              <button type="button" onclick="toggleLightMode()" title="Toggle Light Mode"><img id="modeImage" src="./images/icons/sun.png"></button>
               <a>|</a>
               <a href="#home">Home</a>
               <a>|</a>
