--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Portfolio</title>
+        <meta property="og:image" content="./images/preview.png">
 
         <!-- Custom Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
