added more to About Me and began Project section

--- a/static/index.html
+++ b/static/index.html
@@ -55,7 +55,15 @@
         <!-- Section 2: Projects -->
         <div id="projects">
           <h1>Projects</h1>
-          
+          <br>
+          <div class="card-deck">
+            <div class="card">
+              <a href="./projects/just-enough.html" target="_blank" title="See more!"><img class="card-img-top" src="./images/projects/justenough-preview.png" alt="Just Enough"></a>
+              <div class="card-body">
+                <h4 class="card-title">Just Enough: A Language-Learning Web App</h4>
+              </div>
+            </div>  
+          </div>
         </div>
   
         <!-- Section 3: Skills -->
@@ -178,6 +186,10 @@
           <p>
             I have always been very passionate about technology and Computer Science. I love
             creating new software and solving unique problems with my code.
+          </p>
+          <br>
+          <p>
+            In my free time, I enjoy watching movies and <a href="./images/aboutme_crochet.jpg" target="_blank">crocheting</a>! 
           </p>
           <!-- TODO: continue -->
         </div>
