--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,10 @@
         <title>Portfolio</title>
         <meta property="og:image" content="./images/preview.png">
 
+        <!-- Preloading Stylesheets -->
+        <link rel="preload" href="./style/dark.css" as="style" />
+        <link rel="preload" href="./style/light.css" as="style" />
+        
         <!-- Custom Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
