--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         
         <!-- External Files -->
+        <link rel="preconnect" href="../style/dark.css">
+        <link rel="preconnect" href="../style/light.css">
         <link rel="stylesheet" href="./style/main.css" type="text/css"> 
         <link rel="stylesheet" id="lightingMode" href="./style/dark.css" type="text/css">
         <script src="./script/main.js"></script>
@@ -164,6 +166,14 @@
                 <img class="card-img-top" src="./images/icons/mongodb.png" alt="MongoDB">
                 <div class="card-body">
                   <h4 class="card-title">MongoDB</h4>
+                </div>
+              </div>
+
+              <!-- SQL -->
+              <div class="card">
+                <img class="card-img-top" src="./images/icons/sql.png" alt="SQL">
+                <div class="card-body">
+                  <h4 class="card-title">SQL</h4>
                 </div>
               </div>
             </div>
