--- a/static/projects/just-enough.html
+++ b/static/projects/just-enough.html
@@ -22,6 +22,13 @@
     <body>
         <section id="project-header">
             <h1>Just Enough: A Language-Learning Web App</h1>
+            <br>
+            <h3>Warning: this site is under construction</h3>
+            <br>
+            <h3>Temporary Links:</h3>
+            <a href="https://just-enough.azurewebsites.net/">Just Enough Website</a>
+            <br>
+            <a href="https://github.com/JustEnough-WebApp/LanguageApp">Github</a>
         </section>
         
     </body>
