--- a/static/index.html
+++ b/static/index.html
@@ -210,7 +210,8 @@
           </p>
           <br>
           <p>
-            In my free time, I enjoy watching movies and <a href="./images/aboutme_crochet.jpg" target="_blank">crocheting</a>! 
+            In my free time, I enjoy hanging out with my dog 
+            <a href="images/aboutme_chili.jpg" target="_blank">Chili</a>, watching movies, and crocheting! 
           </p>
           <!-- TODO: continue -->
         </div>
