added project info

--- a/static/index.html
+++ b/static/index.html
@@ -54,6 +54,8 @@
           </div>
           <br><br><br><br>
           <h3>Welcome to my portfolio!</h3>
+          <br>
+          <h4><i>Warning: This Site is Under Construction</i></h4>
         </div>
         <hr>
         
@@ -61,11 +63,23 @@
         <div id="projects">
           <h1>Projects</h1>
           <br>
+
           <div class="card-deck">
             <div class="card">
-              <a href="./projects/just-enough.html" target="_blank" title="See more!"><img class="card-img-top" src="./images/projects/justenough-preview.png" alt="Just Enough"></a>
+              <a href="./projects/just-enough.html" title="See more!">
+                <img class="card-img-top" src="./images/projects/justenough-preview.png" alt="Just Enough">
+              </a>
               <div class="card-body">
                 <h4 class="card-title">Just Enough: A Language-Learning Web App</h4>
+              </div>
+            </div>  
+          
+            <div class="card">
+              <a href="./projects/quiz-master.html" title="See more!">
+                <img class="card-img-top" src="./images/projects/quizmaster-preview.png" alt="QuizMaster">
+              </a>
+              <div class="card-body">
+                <h4 class="card-title">QuizMaster</h4>
               </div>
             </div>  
           </div>
