--- a/static/projects/quiz-master.html
+++ b/static/projects/quiz-master.html
@@ -22,43 +22,42 @@
 
     <body>
         <section id="project-header">
-            <h1>Just Enough: A Language-Learning Web App</h1>
+            <h1>QuizMaster</h1>
             <br>
             <h2>
-                <a href="https://just-enough.azurewebsites.net/" target="_blank">Production Site</a>
+                <a href="https://quizmaster-c66a2.web.app/" target="_blank">Production Site</a>
                  | 
-                 <a href="https://github.com/JustEnough-WebApp/LanguageApp" target="_blank">Github</a>
+                 <a href="https://github.com/QuizMasterInc/QuizMaster" target="_blank">Github</a>
             </h2>
             <br>
         </section>
 
         <section id="about-project">
             <h1>About the Project</h1>
-            <p>Just Enough is a web application that allows users to learn the basics of various languages.
-                Currently, there are four languages available to choose from, and there are several ways to
-                learn and memorize important phrases from these languages.
+            <p>QuizMaster allows users to create quizzes for studying purposes or take quizzes that other 
+                users have created.</p>
+            <p>This program initially created by three students in their Computer Science 
+                Capstone course the semester previous to my Capstone course. My Capstone team then inherited 
+                this project with the goal of enhancing it and expanding its features.
             </p>
-            <p>Just Enough was created by myself and a few other students as our 
-                final project in my Software Engineering course, and I 
-                continued to develop it in further classes and in my free time.
+            <p>The project we inherited was elegant but simple. At the time, there were only 4 default quizzes 
+                user could take, and these quizzes had the same 20 questions each time. There was also no way 
+                for them to create their own quizzes. My primary responsibilites in this project were adding variability
+                to the default quizzes, adding sub-categories to those default quizzes so users could focus on the topics
+                they prefer, and creating a way for users to search and filter through the user-made quizzes.
             </p>
-            <p>It was created under the three-tier architecture model, and it features a client 
-                made with Bootstrap and pure HTML/CSS/JavaScript, a server built on Node.js, 
-                and a NoSQL MongoDB database.
-            </p>
-            <p>I played a significant role in developing each of the three tiers as well as most 
-                of the functionality seen in the current release.</p>
+            <p>QuizMaster is built on React.js and Google Firebase.</p>
             <br><br>
 
             <h1>Gallery</h1>
             <div class="center">
-                <img src="../images/projects/justenough-flashcards.png" />
+                <img src="../images/projects/quizmaster-quiz.png" />
             </div>
             <div class="center">
-                <img src="../images/projects/justenough-matching.png" />
+                <img src="../images/projects/quizmaster-subcategories.png" />
             </div>
             <div class="center">
-                <img src="../images/projects/justenough-dictionary.png" />
+                <img src="../images/projects/quizmaster-userquizzes.png" />
             </div>
         </section>
         
