added project info

--- a/static/projects/just-enough.html
+++ b/static/projects/just-enough.html
@@ -52,13 +52,19 @@
 
             <h1>Gallery</h1>
             <div class="center">
-                <img src="../images/projects/justenough-flashcards.png" />
+                <a href="../images/projects/justenough-flashcards.png">
+                    <img src="../images/projects/justenough-flashcards.png" />
+                </a>
             </div>
             <div class="center">
-                <img src="../images/projects/justenough-matching.png" />
+                <a href="../images/projects/justenough-matching.png">
+                    <img src="../images/projects/justenough-matching.png" />
+                </a>
             </div>
             <div class="center">
-                <img src="../images/projects/justenough-dictionary.png" />
+                <a href="../images/projects/justenough-dictionary.png">
+                    <img src="../images/projects/justenough-dictionary.png" />
+                </a>
             </div>
         </section>
         
