--- a/static/projects/quiz-master.html
+++ b/static/projects/quiz-master.html
@@ -46,6 +46,10 @@
                 to the default quizzes, adding sub-categories to those default quizzes so users could focus on the topics
                 they prefer, and creating a way for users to search and filter through the user-made quizzes.
             </p>
+            <p>
+                At the end of the semester, we were in charge of documenting our changes, current bugs, and future user 
+                stories, and coaching the next-semester team in taking on the project.
+            </p>
             <p>QuizMaster is built on React.js and Google Firebase.</p>
             <br><br>
 
